implemnted ir communication
