# server/Application/Interfaces/Robot/IClientNegativeDistanceNotifier.cs
@@ -1,0 +1,8 @@
+﻿using Core.Domain.Entities.Robot;
+
+namespace Application.Interfaces.Robot;
+
+public interface IClientNegativeDistanceNotifier
+{
+    Task SendNegativeDistanceWarningToClient( string topic,NegativeDistanceWarning negativeDistanceWarning);
+}
